--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "knex": "0.21.18",
     "pg": "8.5.1",
+    "pg-connection-string": "^2.4.0",
     "slugify": "^1.4.7",
     "strapi": "3.5.3",
     "strapi-admin": "3.5.3",
