--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -32,12 +32,10 @@
       "model": "file",
       "via": "related",
       "allowedTypes": [
-        "images",
-        "files",
-        "videos"
+        "images"
       ],
       "plugin": "upload",
-      "required": false
+      "required": true
     }
   }
 }
