--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "strapi-plugin-graphql": "3.5.3",
     "strapi-plugin-upload": "3.5.3",
     "strapi-plugin-users-permissions": "3.5.3",
+    "strapi-provider-upload-better-local": "file:./better-local",
     "strapi-provider-upload-sftp-v2": "^1.0.2",
     "strapi-utils": "3.5.3"
   },
