--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -17,10 +17,14 @@
       "unique": true
     },
     "content": {
-      "type": "richtext"
+      "type": "richtext",
+      "required": true
     },
     "difficulty": {
-      "type": "integer"
+      "type": "integer",
+      "required": true,
+      "min": 1,
+      "max": 3
     },
     "tags": {
       "collection": "tags"
