--- a/api/tags/models/tags.settings.json
+++ b/api/tags/models/tags.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "tags",
   "info": {
-    "name": "tags"
+    "name": "tags",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -11,7 +12,9 @@
   },
   "attributes": {
     "name": {
-      "type": "string"
+      "type": "string",
+      "private": false,
+      "required": true
     }
   }
 }
