--- a/api/term/models/term.settings.json
+++ b/api/term/models/term.settings.json
@@ -12,13 +12,30 @@
   },
   "attributes": {
     "name": {
-      "type": "string"
+      "type": "string",
+      "required": true
     },
     "explanation": {
-      "type": "richtext"
+      "type": "richtext",
+      "required": true
     },
     "related_terms": {
       "collection": "term"
+    },
+    "slug": {
+      "type": "string",
+      "unique": true,
+      "required": false
+    },
+    "summary": {
+      "type": "text",
+      "required": true
+    },
+    "difficulty": {
+      "type": "integer",
+      "min": 1,
+      "max": 3,
+      "required": true
     }
   }
 }
