feat: add course api

--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -39,7 +39,12 @@
         "images"
       ],
       "plugin": "upload",
-      "required": true
+      "required": true,
+      "pluginOptions": {}
+    },
+    "course": {
+      "model": "course",
+      "via": "articles"
     }
   }
 }
